# rfcreader

./: Cargo.toml
src/: main.rs  rfc_parser.rs
templates/: index.html  rfc_view.html
