[package]
name = "rfcreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"
serde = { version = "1", features = ["derive"] }
reqwest = "0.11.18"
actix-web-lab = "0.19.1"
tl = "0.7"
